--- a/oasis-webapp/src/main/resources/templates/messages_fr.xlf
+++ b/oasis-webapp/src/main/resources/templates/messages_fr.xlf
@@ -643,7 +643,7 @@
       </trans-unit>
       <trans-unit id="848768498446688917" datatype="html">
         <source>You will also join these applications:</source>
-        <target>Vous serez également ajouté comme utilisateur des applications suivantes :</note>
+        <target>Vous serez également ajouté comme utilisateur des applications suivantes :</target>
         <note priority="1" from="description">membership invitation applications description</note>
       </trans-unit>
       <trans-unit id="8506870940393194390" datatype="html">
